--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mysql://mysql:e735e9ba68ff7328@dokku-mysql-back-db:3306/back_db
-spring.datasource.username=mysql
-spring.datasource.password=e735e9ba68ff7328
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:postgres://root:VvgmhKlewieUQpSw5Fxx6BnPgl35gakF@dpg-chugdl67avj345c7nemg-a/back_5lal
+spring.datasource.username=root
+spring.datasource.password=VvgmhKlewieUQpSw5Fxx6BnPgl35gakF
+spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 app.front.url=http://front.cluster-ig3.igpolytech.fr
