--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgres://root:VvgmhKlewieUQpSw5Fxx6BnPgl35gakF@dpg-chugdl67avj345c7nemg-a/back_5lal
+spring.datasource.url=jdbc:postgresql://root:VvgmhKlewieUQpSw5Fxx6BnPgl35gakF@dpg-chugdl67avj345c7nemg-a/back_5lal
 spring.datasource.username=root
 spring.datasource.password=VvgmhKlewieUQpSw5Fxx6BnPgl35gakF
 spring.datasource.driverClassName=org.postgresql.Driver
