--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=postgresql://dpg-chugdl67avj345c7nemg-a.frankfurt-postgres.render.com:5432/back_5lal
+spring.datasource.url=jdbc:postgresql://@dpg-chugdl67avj345c7nemg-a:5432/back_5lal?user=root&password=VvgmhKlewieUQpSw5Fxx6BnPgl35gakF&sslmode=require
 
 spring.datasource.username=root
 spring.datasource.password=VvgmhKlewieUQpSw5Fxx6BnPgl35gakF
